<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/productname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:text="@string/amount_off_items"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"/>
    <EditText
        android:id="@+id/quantity"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"

       />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/paying"

        android:layout_marginTop="2dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/price"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="4dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/mail"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="0"
        android:text="@string/selecting"
        android:background="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="20dp"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_weight="0"
        android:text="Save"
        android:background="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


</LinearLayout>